' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml AngestellterGetController

skinparam classAttributeIconSize 0

package org.springframework {
    package web.bind.annotation {
        interface "@PathVariable" as PathVariable
        interface "@RequestParam" as RequestParam
        interface "@RequestMapping" as RequestMapping
        interface "@ExceptionHandler" as ExceptionHandler
        interface "@ResponseStatus" as ResponseStatus
        interface "@GetMapping" as GetMapping
    }

    package http {
        class ResponseEntity<T>
    }
    package hateoas {
        class CollectionModel<E>
    }
}

package jakarta.servlet.http {
    interface HttpServletRequest
}

package java.util {
    interface Map<K,V>
    class UUID
}

package com.acme.angestellter {
    package service {
        class AngestellterReadService << control >> << @Service >>
        class NotFoundException
    }

    package rest #DDDDDD {
        class AngestellterModel <<entity>>

        class AngestellterGetController << boundary >> << @RestController >> << @RequestMapping >> {
            + @GetMapping findById(@PathVariable id: UUID, request: HttpServletRequest): AngestellterModel
            + @GetMapping find(@RequestParam queryParams: Map<String, String>, request: HttpServletRequest): CollectionModel<AngestellterModel>
        }

        class CommonExceptionHandler << @ControllerAdvice >> {
            + @ExceptionHandler @ResponseStatus onNotFound(ex: NotFoundException)
        }

        AngestellterGetController o--> "1" AngestellterReadService : service
        AngestellterGetController ..> AngestellterModel

        AngestellterGetController .up.> ResponseEntity
        AngestellterGetController .up.> CollectionModel
        AngestellterGetController .up.> HttpServletRequest
        AngestellterGetController .up.> PathVariable
        AngestellterGetController .up.> RequestParam

        CommonExceptionHandler .up.> ExceptionHandler
        CommonExceptionHandler .up.> ResponseStatus
        CommonExceptionHandler ..> NotFoundException
        CommonExceptionHandler .up[hidden].> AngestellterModel

        AngestellterGetController .up.> UUID
        AngestellterGetController .up.> Map

        AngestellterModel .[hidden].> AngestellterReadService
    }
}

hide empty members


@enduml
